--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,6 +1,5 @@
 @font-face {
-  font-family: '04b03';
-  src: url('../assets/fonts/04b03.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
+  font-family: 'xpaider pixel explosion 02';
+  src: url('../assets/fonts/XPDR_02.TTF') format('truetype');
+  font-display: swap;
 }
