--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,5 +1,1 @@
-@font-face {
-  font-family: 'xpaider pixel explosion 02';
-  src: url('../assets/fonts/XPDR_02.TTF') format('truetype');
-  font-display: swap;
-}
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
