--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap')
