--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,6 +17,7 @@
 
   .font-pixels {
     font-family: "Pixelify Sans", sans-serif;
+    /* font-family: "VT323", monospace; */
   }
 
   .bg-home {
