Fix – post css nesting

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,7 +29,7 @@
 
   .dark {
     .bg-home {
-      background-image: url('../assets/pattern-bg-dark.svg');
+      background-image: none;
     }
   }
 
