--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,15 +21,15 @@
   }
 
   .bg-home {
-    background-image: url('../assets/pattern-bg.svg');
+    /* background-image: url('../assets/pattern-bg.svg');
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
+    background-size: cover; */
   }
 
   .dark {
     .bg-home {
-      background-image: none;
+      /* background-image: none; */
     }
   }
 
