feat - intro section

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -110,6 +110,26 @@
     left: 2px;
   }
 
+  .dot-bottom-right-4 {
+    content: '';
+    width: 4px;
+    height: 4px;
+    position: absolute;
+    @apply bg-sky-400;
+    bottom: 2px;
+    right: 2px;
+  }
+
+  .dot-bottom-left-4 {
+    content: '';
+    width: 4px;
+    height: 4px;
+    position: absolute;
+    @apply bg-sky-400;
+    bottom: 2px;
+    left: 2px;
+  }
+
   .Text-shadow--extralarge {
     text-shadow:
       -0.222rem -0.222rem 0 var(--color-text-shadow),
@@ -191,5 +211,42 @@
     text-shadow: 0.222rem 0.222rem 0 var(--color-text-shadow);
   }
 
+
+}
+
+.Border-pixel {
+  @apply relative flex items-center;
+}
+
+.Border-pixel::before {
+  content: '';
+  @apply w-[4px] h-[4px];
+  @apply absolute;
+  @apply bg-sky-400;
+  @apply top-[2px];
+  @apply left-[2px];
+}
+
+.Border-pixel::after {
+  content: '';
+  @apply w-[4px] h-[4px];
+  @apply absolute;
+  @apply bg-sky-400;
+  @apply top-[2px];
+  @apply right-[2px];
+}
+
+.Border-pixel-label {
+  @apply px-4 font-bold text-sky-400 dark:text-sky-400 bg-sky-400/10;
+  @apply border-4 border-sky-400;
+  clip-path: polygon(
+      /* top left */
+      0 6px, 6px 6px, 6px 0,
+      /* top right */
+      calc(100% - 6px) 0, calc(100% - 6px) 6px, 100% 6px,
+      /* bottom right */
+      100% calc(100% - 6px), calc(100% - 6px) calc(100% - 6px), calc(100% - 6px) 100%,
+      /* bottom left */
+      6px 100%, 6px calc(100% - 6px), 0 calc(100% - 6px));
 
 }
